src/css/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/************************************* Font ******************************/

@import url("https://fonts.googleapis.com/css2?family=Hurricane&display=swap");

/************************************************************* Card *****************************************************/

.card1,
.card2,
.card3,
.card4,
.card5,
.card6,
.card7,
.card8,
.card9 {
  height: 180px;
  width: 100%;
  max-width: 350px;
  min-width: 280px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.card1 {
  background-image: radial-gradient(
    circle farthest-corner at 12.3% 19.3%,
    rgba(85, 88, 218, 1) 0%,
    rgba(95, 209, 249, 1) 100.2%
  );
}

.card2 {
  background-image: radial-gradient(
    circle farthest-corner at 10% 20%,
    rgba(90, 92, 106, 1) 0%,
    rgba(32, 45, 58, 1) 81.3%
  );
}

.card3 {
  background-image: radial-gradient(
    circle farthest-corner at 1.3% 2.8%,
    rgba(239, 249, 249, 1) 0%,
    rgba(182, 199, 226, 1) 100.2%
  );
}

.card4 {
  background: linear-gradient(to right, #ff416c, #ff4b2b);
}

.card5 {
  background-image: linear-gradient(
    68.3deg,
    rgba(245, 177, 97, 1) 0.4%,
    rgba(236, 54, 110, 1) 100.2%
  );
}

.card6 {
  background-image: linear-gradient(
    99deg,
    rgba(115, 18, 81, 1) 10.6%,
    rgba(28, 28, 28, 1) 118%
  );
}
.card7 {
  background-image: linear-gradient(
    109.6deg,
    rgba(170, 255, 169, 1) 11.2%,
    rgba(17, 255, 189, 1) 91.1%
  );
}

.card8 {
  background-image: linear-gradient(
    111.6deg,
    rgba(174, 68, 223, 1) 27.3%,
    rgba(246, 135, 135, 1) 112.7%
  );
}

.card9 {
  background-image: linear-gradient(
    68.4deg,
    rgba(99, 251, 215, 1) -0.4%,
    rgba(5, 222, 250, 1) 100.2%
  );
}

/*************************************************************************** Background *************************************************************************************/
.bgBody {
  background-image: radial-gradient(
      circle at center center,
      rgba(33, 33, 33, 0),
      rgb(33, 33, 33)
    ),
    repeating-linear-gradient(
      135deg,
      rgb(33, 33, 33) 0px,
      rgb(33, 33, 33) 1px,
      transparent 1px,
      transparent 4px
    ),
    repeating-linear-gradient(
      45deg,
      rgb(56, 56, 56) 0px,
      rgb(56, 56, 56) 5px,
      transparent 5px,
      transparent 6px
    ),
    linear-gradient(90deg, rgb(33, 33, 33), rgb(33, 33, 33));
}

.bgCardFooter {
  background-image: repeating-linear-gradient(
      135deg,
      hsla(190, 0%, 89%, 0.15) 0px,
      hsla(190, 0%, 89%, 0.15) 0px,
      transparent 0px,
      transparent 1px,
      hsla(190, 0%, 89%, 0.15) 1px,
      hsla(190, 0%, 89%, 0.15) 4px,
      transparent 4px,
      transparent 5px,
      hsla(190, 0%, 89%, 0.15) 5px,
      hsla(190, 0%, 89%, 0.15) 10px
    ),
    repeating-linear-gradient(
      45deg,
      hsla(190, 0%, 89%, 0.15) 0px,
      hsla(190, 0%, 89%, 0.15) 0px,
      transparent 0px,
      transparent 1px,
      hsla(190, 0%, 89%, 0.15) 1px,
      hsla(190, 0%, 89%, 0.15) 4px,
      transparent 4px,
      transparent 5px,
      hsla(190, 0%, 89%, 0.15) 5px,
      hsla(190, 0%, 89%, 0.15) 10px
    ),
    repeating-linear-gradient(
      0deg,
      hsla(190, 0%, 89%, 0.15) 0px,
      hsla(190, 0%, 89%, 0.15) 0px,
      transparent 0px,
      transparent 1px,
      hsla(190, 0%, 89%, 0.15) 1px,
      hsla(190, 0%, 89%, 0.15) 4px,
      transparent 4px,
      transparent 5px,
      hsla(190, 0%, 89%, 0.15) 5px,
      hsla(190, 0%, 89%, 0.15) 10px
    ),
    repeating-linear-gradient(
      90deg,
      hsla(190, 0%, 89%, 0.15) 0px,
      hsla(190, 0%, 89%, 0.15) 0px,
      transparent 0px,
      transparent 1px,
      hsla(190, 0%, 89%, 0.15) 1px,
      hsla(190, 0%, 89%, 0.15) 4px,
      transparent 4px,
      transparent 5px,
      hsla(190, 0%, 89%, 0.15) 5px,
      hsla(190, 0%, 89%, 0.15) 10px
    ),
    linear-gradient(90deg, rgb(251, 251, 251), rgb(251, 251, 251));
}

.bgFooter {
  background-image: repeating-linear-gradient(
      67.5deg,
      hsla(145, 0%, 97%, 0.2) 0px,
      hsla(145, 0%, 97%, 0.2) 0px,
      transparent 0px,
      transparent 1px,
      hsla(145, 0%, 97%, 0.2) 1px,
      hsla(145, 0%, 97%, 0.2) 4px,
      transparent 4px,
      transparent 5px,
      hsla(145, 0%, 97%, 0.2) 5px,
      hsla(145, 0%, 97%, 0.2) 8px
    ),
    repeating-linear-gradient(
      0deg,
      hsla(145, 0%, 97%, 0.2) 0px,
      hsla(145, 0%, 97%, 0.2) 0px,
      transparent 0px,
      transparent 1px,
      hsla(145, 0%, 97%, 0.2) 1px,
      hsla(145, 0%, 97%, 0.2) 4px,
      transparent 4px,
      transparent 5px,
      hsla(145, 0%, 97%, 0.2) 5px,
      hsla(145, 0%, 97%, 0.2) 8px
    ),
    linear-gradient(135deg, rgb(237, 237, 237), rgb(199, 199, 199));
}

/*********************************** Gradient Text **********************************/

.gradH1 {
  background: #ff8a00;
  background: -webkit-linear-gradient(
    to left,
    #ff8a00 0%,
    #dee50e 41%,
    #e52e71 100%
  );
  background: -moz-linear-gradient(
    to left,
    #ff8a00 0%,
    #dee50e 41%,
    #e52e71 100%
  );
  background: linear-gradient(to left, #ff8a00 0%, #dee50e 41%, #e52e71 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

#overlay {
  background: rgba(0, 0, 0, 0.4);
  position: fixed;
  top: 0;
  height: 100vh;
  width: 100vw;
}
#modal {
  height: auto;
  max-width: 1400px;
  min-width: 300px;
  /* width: 750px; */
  padding: 15px;
  border-radius: 10px;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin: 0 auto;
  z-index: 200;
}

